--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <header class="font-family container mx-auto">
     <!-- navbar section -->
-    <div class="navbar mt-10 lg:bg-[#F85559] sm rounded-full">
+    <div class="navbar mt-10 lg:bg-[#F85559]  rounded-full">
       <div class="navbar-start hidden lg:flex">
         <ul class="menu menu-horizontal px-1 tex-2xl">
           <li class="text-xl text-white"><a>Home</a></li>
@@ -37,8 +37,8 @@
           <li class="text-xl text-white"><a>All Fruits</a></li>
         </ul>
       </div>
-      <div class="lg:navbar-center justify-center navbar-start">
-        <div class=" items-center flex gap-4">
+      <div class="lg:navbar-center justify-center  navbar-start">
+        <div class=" items-center  flex gap-4">
           <img src="./images/logo.png" alt="">
           <h3 class="text-3xl  font-bold text-black lg:text-white">Fruit Burst</h3>
         </div>
@@ -75,7 +75,7 @@
   <main class="container mx-auto font-family">
 
     <!-- deal of the day section -->
-    <div class="flex justify-between items-center flex-col lg:flex-row">
+    <div class="flex justify-between items-center mt-32 flex-col lg:flex-row">
       <div class="">
         <h3 class="text-2xl text-center lg:text-start lg:text-5xl  mb-6 font-extrabold">Deal of the day</h3>
         <p class="font-bold text-center lg:text-start"> Contrary to popular belief, is not simply random text. It has
@@ -84,47 +84,47 @@
       </div>
       <div class="flex gap-8">
         <div>
-          <h4 class="text-5xl font-bold">29</h4>
+          <h4 class="lg:text-5xl font-bold">29</h4>
           <p class="text-center">Days</p>
         </div>
         <div>
           <i class="fa-solid fa-ellipsis-vertical mt-2"></i>
         </div>
         <div>
-          <h4 class="text-5xl font-bold">15</h4>
+          <h4 class="lg:text-5xl font-bold">15</h4>
           <p class="text-center">Hours</p>
         </div>
         <div>
           <i class="fa-solid fa-ellipsis-vertical mt-2"></i>
         </div>
         <div>
-          <h4 class="text-5xl font-bold">25</h4>
+          <h4 class="lg:text-5xl font-bold">25</h4>
           <p class="text-center">Minutes</p>
         </div>
         <div>
           <i class="fa-solid fa-ellipsis-vertical mt-2"></i>
         </div>
         <div>
-          <h4 class="text-5xl font-bold">08</h4>
+          <h4 class="lg:text-5xl font-bold">08</h4>
           <p class="text-center">Seconds</p>
         </div>
 
       </div>
     </div>
     <!-- card 1 -->
-    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 mt-10">
+    <div class="grid  grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 mt-10">
       <div class="card p-8 border">
-        <figure><img src="/images/./fruit6.png" alt="Shoes" /></figure>
+         <img class="h-32 w-32 flex justify-center" src="./images/fruit6.png" alt="">
         <div class="card-body  justify-center space-y-6">
           <h2 class="text-xl	font-extrabold text-center">12.90$ - 18.85$</h2>
           <hr class="border-b-2 border-gray-200">
           <p class="text-gray-400 text-center">Apples</p>
           <div class="rating justify-center">
-            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
-            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+            <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" />
+            <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" checked />
+            <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" />
+            <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" />
+            <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" />
           </div>
           <!-- modal 1 -->
           <button class="bg-transparent border-none font-medium text-[#F85559]"
@@ -133,15 +133,15 @@
             <form method="dialog" class="modal-box">
               <div class="card card-compact ">
                 <div class="card-body">
-                  <figure><img src="/images/./fruit6.png" alt="Shoes" /></figure>
+                  <img class="h-32 w-32 flex justify-center" src="./images/fruit6.png" alt="">
                   <div class="card-body justify-center space-y-6">
                     <h2 class="text-xl	font-extrabold text-center">12.90$ - 18.85$</h2>
                     <div class="rating justify-center">
-                      <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                      <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
-                      <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                      <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                      <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                      <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" />
+                      <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" checked />
+                      <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" />
+                      <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" />
+                      <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" />
                     </div>
                     <div class="card-actions justify-center">
                       <button class="btn text-[#F85559] bg-transparent border-[#F85559]">Close</button>
@@ -155,7 +155,7 @@
       </div>
       <!-- card 2 -->
       <div class="card p-8 border">
-        <figure><img src="/images/./fruit7.png" alt="Shoes" /></figure>
+        <img src="./images/fruit7.png" alt="">
         <div class="card-body justify-center space-y-6">
           <h2 class="text-xl	font-extrabold text-center">12.90$ - 18.85$</h2>
           <hr class="border-b-2 border-gray-200">
@@ -174,7 +174,7 @@
             <form method="dialog" class="modal-box">
               <div class="card card-compact ">
                 <div class="card-body">
-                  <figure><img src="/images/./fruit7.png" alt="Shoes" /></figure>
+                  <img src="./images/fruit7.png" alt="">
                   <div class="card-body justify-center space-y-6">
                     <h2 class="text-xl	font-extrabold text-center">12.90$ - 18.85$</h2>
                     <div class="rating justify-center">
@@ -196,17 +196,17 @@
       </div>
       <!-- card 3 -->
       <div class="card p-8 border">
-        <figure><img src="/images/./fruit8.png" alt="Shoes" /></figure>
+        <img src="./images/fruit8.png" alt="">
         <div class="card-body justify-center space-y-6">
           <h2 class="text-xl	font-extrabold text-center">12.90$ - 18.85$</h2>
           <hr class="border-b-2 border-gray-200">
           <p class="text-gray-400 text-center">Red DragonApples</p>
           <div class="rating justify-center">
-            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
-            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+            <input type="radio" name="rating-3" class="mask mask-star-2 bg-orange-400" />
+            <input type="radio" name="rating-3" class="mask mask-star-2 bg-orange-400" />
+            <input type="radio" name="rating-3" class="mask mask-star-2 bg-orange-400" checked />
+            <input type="radio" name="rating-3" class="mask mask-star-2 bg-orange-400" />
+            <input type="radio" name="rating-3" class="mask mask-star-2 bg-orange-400" />
           </div>
           <!-- modal 3 -->
           <button class="bg-transparent border-none font-medium text-[#F85559]"
@@ -215,15 +215,15 @@
             <form method="dialog" class="modal-box">
               <div class="card card-compact ">
                 <div class="card-body">
-                  <figure><img src="/images/./fruit8.png" alt="Shoes" /></figure>
+                  <img src="./images/fruit8.png" alt="">
                   <div class="card-body justify-center space-y-6">
                     <h2 class="text-xl	font-extrabold text-center">12.90$ - 18.85$</h2>
                     <div class="rating justify-center">
-                      <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                      <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
-                      <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                      <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                      <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                      <input type="radio" name="rating-3" class="mask mask-star-2 bg-orange-400" />
+                      <input type="radio" name="rating-3" class="mask mask-star-2 bg-orange-400" checked />
+                      <input type="radio" name="rating-3" class="mask mask-star-2 bg-orange-400" />
+                      <input type="radio" name="rating-3" class="mask mask-star-2 bg-orange-400" />
+                      <input type="radio" name="rating-3" class="mask mask-star-2 bg-orange-400" />
                     </div>
                     <div class="card-actions justify-center">
                       <button class="btn text-[#F85559] bg-transparent border-[#F85559]">Close</button>
@@ -237,17 +237,17 @@
       </div>
       <!-- card 4 -->
       <div class="card p-8 border">
-        <img src="/images/./fruit9.png" alt="" />
+        <img src="./images/fruit9.png" alt="">
         <div class="card-body justify-center space-y-6">
           <h2 class="text-xl	font-extrabold text-center ">12.90$ - 18.85$</h2>
           <hr class="border-b-2 border-gray-200">
           <p class="text-gray-400 text-center">Banana</p>
           <div class="rating justify-center">
-            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
-            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+            <input type="radio" name="rating-4" class="mask mask-star-2 bg-orange-400" />
+            <input type="radio" name="rating-4" class="mask mask-star-2 bg-orange-400" checked />
+            <input type="radio" name="rating-4" class="mask mask-star-2 bg-orange-400" />
+            <input type="radio" name="rating-4" class="mask mask-star-2 bg-orange-400" />
+            <input type="radio" name="rating-4" class="mask mask-star-2 bg-orange-400" />
           </div>
           <!-- modal 4 -->
           <button class="bg-transparent border-none font-medium text-[#F85559]"
@@ -256,15 +256,15 @@
             <form method="dialog" class="modal-box">
               <div class="card card-compact ">
                 <div class="card-body">
-                  <img src="/images/./fruit9.png" alt="" />
+                 <img src="./images/fruit9.png" alt="">
                   <div class="card-body justify-center space-y-6">
                     <h2 class="text-xl	font-extrabold text-center">12.90$ - 18.85$</h2>
                     <div class="rating justify-center">
-                      <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                      <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
-                      <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                      <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                      <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                      <input type="radio" name="rating-4" class="mask mask-star-2 bg-orange-400" />
+                      <input type="radio" name="rating-4" class="mask mask-star-2 bg-orange-400" checked />
+                      <input type="radio" name="rating-4" class="mask mask-star-2 bg-orange-400" />
+                      <input type="radio" name="rating-4" class="mask mask-star-2 bg-orange-400" />
+                      <input type="radio" name="rating-4" class="mask mask-star-2 bg-orange-400" />
                     </div>
                     <div class="card-actions justify-center">
                       <button class="btn text-[#F85559] bg-transparent border-[#F85559]">Close</button>
@@ -279,7 +279,7 @@
     </div>
     </div>
     <div class="flex justify-center mt-12">
-      <button class=" bg-[#F85559] text-white rounded-xl px-6 py-5 rounded text-xl w-32 ">Shop All</button>
+      <button class=" bg-[#F85559] text-white rounded-xl px-6 py-5  text-xl w-32 ">Shop All</button>
     </div>
 
     <!--Meet the team section  -->
@@ -344,9 +344,9 @@
                   <h3 class="text-2xl font-bold">Chaity</h3>
                   <p>Fruits Expert</p>
                   <div class="space-x-4">
-                    <a href=""><i class="fa fa-brands fa-facebook"></i></a>
-                    <a href=""><i class="fa fa-brands fa-twitter"></i></a>
-                    <a href=""><i class="fa fa-brands fa-linkedin"></i></a>
+                    <a href=""><i class="fa fa-brands fa-facebook "></i></a>
+                    <a href=""><i class="fa fa-brands fa-twitter "></i></a>
+                    <a href=""><i class="fa fa-brands fa-linkedin "></i></a>
                   </div>
                 </div>
               </div>
@@ -453,7 +453,7 @@
               <i class="fa fa-solid fa-thumbs-up"></i>
             </div>
           </div>
-         
+
         </div>
       </div>
     </section>
@@ -461,30 +461,30 @@
   </main>
 
   <!-- footer section -->
-  <footer class="footer mt-32 footer-center pt-24 pb-24 w-full bg-black">
-    <div class=" items-center flex gap-4">
+  <footer class="footer mt-32 footer-center pt-24 pb-24  bg-black">
+    <div class=" items-center justify-center pr-10 flex gap-4">
       <img src="./images/logo.png" alt="">
-      <h3 class="text-3xl  font-bold text-white lg:text-white">Fruit Burst</h3>
+      <h3 class="text-3xl  font-bold text-white">Fruit Burst</h3>
     </div>
-    <div class="grid grid-flow-col font-bold text-white gap-4">
-      <a class="link link-hover">Home</a> 
-      <a class="link link-hover">About Us</a> 
-      <a class="link link-hover">Shop</a> 
+    <div class="grid grid-flow-col  font-bold text-white gap-4">
+      <a class="link link-hover">Home</a>
+      <a class="link link-hover">About Us</a>
+      <a class="link link-hover">Shop</a>
       <a class="link link-hover">All Fruits</a>
       <a class="link link-hover">Support</a>
       <a class="link link-hover">My Account</a>
-    </div> 
+    </div>
     <div>
       <div class="grid grid-flow-col text-2xl  text-white gap-8">
-        <a><i class="fa-brands fa fa-twitter"></i></a> 
-        <a><i class="fa-brands fa fa-facebook-f"></i></a> 
+        <a><i class="fa-brands fa fa-twitter"></i></a>
+        <a><i class="fa-brands fa fa-facebook-f"></i></a>
         <a><i class="fa-brands fa fa-youtube"></i></a>
         <a><i class="fa-brands fa fa-linkedin"></i></a>
         <a><i class="fa-brands fa fa-instagram"></i></a>
         <a><i class="fa-brands fa fa-apple"></i></a>
       </div>
-    </div> 
-   
+    </div>
+
   </footer>
 </body>
 
