--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
     .lato-font {
       font-family: 'Lato', sans-serif;
     }
-    .{
-      border: 1px solid red;
-    }
+  
   </style>
 
 <body>
@@ -143,7 +141,8 @@
                 <div class="card-body flex flex-col justify-center items-center">
                   <img class="h-36 w-36 flex justify-center" src="./images/fruit6.png" alt="">
                   <div class="card-body justify-center space-y-6">
-                    <h2 class="text-xl	font-extrabold text-center">12.90$ - 18.85$</h2>
+                    <h4 class="text-black text-4xl font-bold text-center">apples
+                    </h4>
                     <p>Professional employees are there for you to pick the most <br> amazing and fresh fruits.</p>
                     <div class="rating justify-center">
                       <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" />
@@ -172,31 +171,32 @@
         <div class="card-body  space-y-3 ">
           <h2 class="text-xl	font-extrabold text-center">12.90$ - 18.85$</h2>
           <hr class="border-b-2 border-gray-200">
-         <h4 class="text-gray-400 text-center">apples</h4>
+         <h4 class="text-gray-400 text-center">Orange</h4>
           <div class="rating justify-center">
-            <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" />
-            <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" checked />
-            <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" />
-            <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" />
-            <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" />
+            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
           </div>
           <!-- modal 2 -->
           <button class="bg-transparent border-none font-medium text-[#F85559]"
-            onclick="my_modal_1.showModal()">Details</button>
-          <dialog id="my_modal_1" class="modal">
+            onclick="my_modal_2.showModal()">Details</button>
+          <dialog id="my_modal_2" class="modal">
             <form method="dialog" class="modal-box">
               <div class="card card-compact ">
                 <div class="card-body flex flex-col justify-center items-center">
                   <img class="h-36 w-36 flex justify-center" src="./images/fruit7.png" alt="">
                   <div class="card-body justify-center space-y-6">
-                    <h2 class="text-xl	font-extrabold text-center">12.90$ - 18.85$</h2>
+                    <h4 class="text-black text-4xl font-bold text-center">Orange
+                    </h4>
                     <p>Professional employees are there for you to pick the most <br> amazing and fresh fruits.</p>
                     <div class="rating justify-center">
-                      <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" />
-                      <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" checked />
-                      <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" />
-                      <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" />
-                      <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" />
+                      <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                      <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                      <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                      <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                      <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                     </div>
                     <div class="card-actions justify-center">
                       <button class="btn text-[#F85559] bg-transparent border-[#F85559]">Close</button>
@@ -218,31 +218,32 @@
         <div class="card-body  space-y-3 ">
           <h2 class="text-xl	font-extrabold text-center">12.90$ - 18.85$</h2>
           <hr class="border-b-2 border-gray-200">
-         <h4 class="text-gray-400 text-center">apples</h4>
+         <h4 class="text-gray-400 text-center">Red Dragon</h4>
           <div class="rating justify-center">
-            <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" />
-            <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" checked />
-            <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" />
-            <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" />
-            <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" />
+            <input type="radio" name="rating-3" class="mask mask-star-2 bg-orange-400" />
+            <input type="radio" name="rating-3" class="mask mask-star-2 bg-orange-400" checked />
+            <input type="radio" name="rating-3" class="mask mask-star-2 bg-orange-400" />
+            <input type="radio" name="rating-3" class="mask mask-star-2 bg-orange-400" />
+            <input type="radio" name="rating-3" class="mask mask-star-2 bg-orange-400" />
           </div>
           <!-- modal 3 -->
           <button class="bg-transparent border-none font-medium text-[#F85559]"
-            onclick="my_modal_1.showModal()">Details</button>
-          <dialog id="my_modal_1" class="modal">
+            onclick="my_modal_3.showModal()">Details</button>
+          <dialog id="my_modal_3" class="modal">
             <form method="dialog" class="modal-box">
               <div class="card card-compact ">
                 <div class="card-body flex flex-col justify-center items-center">
                   <img class="h-36 w-36 flex justify-center" src="./images/fruit8.png" alt="">
                   <div class="card-body justify-center space-y-6">
-                    <h2 class="text-xl	font-extrabold text-center">12.90$ - 18.85$</h2>
+                    <h4 class="text-black text-4xl font-bold text-center">Red Dragon
+                    </h4>
                     <p>Professional employees are there for you to pick the most <br> amazing and fresh fruits.</p>
                     <div class="rating justify-center">
-                      <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" />
-                      <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" checked />
-                      <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" />
-                      <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" />
-                      <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" />
+                      <input type="radio" name="rating-3" class="mask mask-star-2 bg-orange-400" />
+                      <input type="radio" name="rating-3" class="mask mask-star-2 bg-orange-400" checked />
+                      <input type="radio" name="rating-3" class="mask mask-star-2 bg-orange-400" />
+                      <input type="radio" name="rating-3" class="mask mask-star-2 bg-orange-400" />
+                      <input type="radio" name="rating-3" class="mask mask-star-2 bg-orange-400" />
                     </div>
                     <div class="card-actions justify-center">
                       <button class="btn text-[#F85559] bg-transparent border-[#F85559]">Close</button>
@@ -264,31 +265,31 @@
         <div class="card-body  space-y-3 ">
           <h2 class="text-xl	font-extrabold text-center">12.90$ - 18.85$</h2>
           <hr class="border-b-2 border-gray-200">
-         <h4 class="text-gray-400 text-center">apples</h4>
+         <h4 class="text-gray-400 text-center">Banana</h4>
           <div class="rating justify-center">
-            <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" />
-            <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" checked />
-            <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" />
-            <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" />
-            <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" />
+            <input type="radio" name="rating-4" class="mask mask-star-2 bg-orange-400" />
+            <input type="radio" name="rating-4" class="mask mask-star-2 bg-orange-400" checked />
+            <input type="radio" name="rating-4" class="mask mask-star-2 bg-orange-400" />
+            <input type="radio" name="rating-4" class="mask mask-star-2 bg-orange-400" />
+            <input type="radio" name="rating-4" class="mask mask-star-2 bg-orange-400" />
           </div>
-          <!-- modal 1 -->
+          <!-- modal  -->
           <button class="bg-transparent border-none font-medium text-[#F85559]"
-            onclick="my_modal_1.showModal()">Details</button>
-          <dialog id="my_modal_1" class="modal">
+            onclick="my_modal_4.showModal()">Details</button>
+          <dialog id="my_modal_4" class="modal">
             <form method="dialog" class="modal-box">
               <div class="card card-compact ">
                 <div class="card-body flex flex-col justify-center items-center">
                   <img class="h-36 w-36 flex justify-center" src="./images/fruit9.png" alt="">
                   <div class="card-body justify-center space-y-6">
-                    <h2 class="text-xl	font-extrabold text-center">12.90$ - 18.85$</h2>
+                    <h4 class="text-black text-4xl font-bold text-center">Banana</h4>
                     <p>Professional employees are there for you to pick the most <br> amazing and fresh fruits.</p>
                     <div class="rating justify-center">
-                      <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" />
-                      <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" checked />
-                      <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" />
-                      <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" />
-                      <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" />
+                      <input type="radio" name="rating-4" class="mask mask-star-2 bg-orange-400" />
+                      <input type="radio" name="rating-4" class="mask mask-star-2 bg-orange-400" checked />
+                      <input type="radio" name="rating-4" class="mask mask-star-2 bg-orange-400" />
+                      <input type="radio" name="rating-4" class="mask mask-star-2 bg-orange-400" />
+                      <input type="radio" name="rating-4" class="mask mask-star-2 bg-orange-400" />
                     </div>
                     <div class="card-actions justify-center">
                       <button class="btn text-[#F85559] bg-transparent border-[#F85559]">Close</button>
